Further implement http-netty4 package (#44890)
Further implement http-netty4 package