@@ -13,12 +13,12 @@
   </parent>
 
   <groupId>io.clientcore</groupId>
-  <artifactId>http-okhttp3</artifactId>
+  <artifactId>http-netty4</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-beta.3</version> <!-- {x-version-update;io.clientcore:http-okhttp3;current} -->
+  <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:http-netty4;current} -->
 
-  <name>Java OkHttp3 HTTP Client Library</name>
-  <description>This package contains the OkHttp HTTP client plugin for io.clientcore.</description>
+  <name>Java Netty HTTP Client Library</name>
+  <description>This package contains the Netty HTTP client plugin for io.clientcore.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
@@ -38,15 +38,17 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <legal><![CDATA[[INFO] Any downloads listed may be third party software.  Microsoft grants you no rights for third party software.]]></legal>
-    <jacoco.min.linecoverage>0.80</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.65</jacoco.min.branchcoverage>
+    <jacoco.min.linecoverage>0.60</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.55</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
+      --add-exports io.clientcore.core/io.clientcore.core.implementation.util=ALL-UNNAMED
 
-      --add-opens io.clientcore.http.okhttp3/io.clientcore.http.okhttp3=ALL-UNNAMED
-      --add-opens io.clientcore.http.okhttp3/io.clientcore.http.okhttp3.implementation=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty/io.clientcore.http.netty=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty/io.clientcore.http.netty4.implementation=ALL-UNNAMED
+
+      --add-reads io.clientcore.http.netty=java.logging
     </javaModulesSurefireArgLine>
 
     <!-- Enables fail on deprecated API usage. -->
@@ -55,8 +57,10 @@
     <javadoc.excludePackageNames>
       io.clientcore.core.annotation,io.clientcore.core.credential,io.clientcore.core.http,io.clientcore.core.http.annotation,io.clientcore.core.http.client,
       io.clientcore.core.http.exception,io.clientcore.core.http.models,io.clientcore.core.http.pipeline,io.clientcore.core.implementation,
-      io.clientcore.core.implementation*,io.clientcore.core.models,io.clientcore.core.utils,io.clientcore.core.util*
+      io.clientcore.core.implementation*,io.clientcore.core.models,io.clientcore.core.util,io.clientcore.core.util*
     </javadoc.excludePackageNames>
+
+    <netty.version>4.1.118.Final</netty.version> <!-- {x-version-update;io.netty:netty-common;external_dependency} -->
   </properties>
 
   <dependencies>
@@ -65,24 +69,59 @@
       <artifactId>core</artifactId>
       <version>1.0.0-beta.9</version> <!-- {x-version-update;io.clientcore:core;current} -->
     </dependency>
+
     <dependency>
-      <groupId>com.squareup.okio</groupId>
-      <artifactId>okio-jvm</artifactId>
-      <version>3.9.1</version> <!-- {x-version-update;com.squareup.okio:okio-jvm;external_dependency} -->
+      <groupId>io.netty</groupId>
+      <artifactId>netty-buffer</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-buffer;external_dependency} -->
     </dependency>
     <dependency>
-      <groupId>com.squareup.okhttp3</groupId>
-      <artifactId>okhttp</artifactId>
-      <version>4.12.0</version> <!-- {x-version-update;com.squareup.okhttp3:okhttp;external_dependency} -->
-      <exclusions>
-        <exclusion>
-          <groupId>com.squareup.okio</groupId>
-          <artifactId>okio</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-codec;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-codec-http;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http2</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-codec-http2;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
+      <version>4.1.118.Final</version>  <!-- {x-version-update;io.netty:netty-common;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-handler</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-handler;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-handler-proxy</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-handler-proxy;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-resolver</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-resolver;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-resolver-dns</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-resolver-dns;external_dependency} -->
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-transport</artifactId>
+      <version>4.1.118.Final</version> <!-- {x-version-update;io.netty:netty-transport;external_dependency} -->
     </dependency>
 
-    <!-- Test dependencies on core, because we want to run tests inherited from this module using OkHttp -->
+    <!-- Test dependencies on core, because we want to run tests inherited from this module using Netty -->
     <dependency>
       <groupId>io.clientcore</groupId>
       <artifactId>core</artifactId>
@@ -114,6 +153,7 @@
       <version>5.11.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-engine;external_dependency} -->
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
@@ -138,8 +178,16 @@
           <rules>
             <bannedDependencies>
               <includes>
-                <include>com.squareup.okhttp3:okhttp:[4.12.0]</include> <!-- {x-include-update;com.squareup.okhttp3:okhttp;external_dependency} -->
-                <include>com.squareup.okio:okio-jvm:[3.9.1]</include> <!-- {x-include-update;com.squareup.okio:okio-jvm;external_dependency} -->
+                <include>io.netty:netty-buffer:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-buffer;external_dependency} -->
+                <include>io.netty:netty-codec:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-codec;external_dependency} -->
+                <include>io.netty:netty-codec-http:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-codec-http;external_dependency} -->
+                <include>io.netty:netty-codec-http2:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-codec-http2;external_dependency} -->
+                <include>io.netty:netty-common:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-common;external_dependency} -->
+                <include>io.netty:netty-handler:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-handler;external_dependency} -->
+                <include>io.netty:netty-handler-proxy:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-handler-proxy;external_dependency} -->
+                <include>io.netty:netty-resolver:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-resolver;external_dependency} -->
+                <include>io.netty:netty-resolver-dns:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-resolver-dns;external_dependency} -->
+                <include>io.netty:netty-transport:[4.1.118.Final]</include> <!-- {x-include-update;io.netty:netty-transport;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
